# claris

./: .gitignore  Cargo.toml  Makefile  README.md
.circleci/: config.yml
claris-impl/: .gitignore  Cargo.toml
claris-impl/benches/: compile_benchmark.rs  compile_benchmark_example.yml
claris-impl/examples/: face_sample.rs  face_sample.yml  node_samples.rs  node_samples.yml
claris-impl/src/: compiler.rs  context.rs  lib.rs  loader.rs
claris-impl/src/ext/: mod.rs  yaml.rs
claris-impl/src/node/: arc.rs  circle.rs  color.rs  curve.rs  error.rs  layer.rs  line.rs  mod.rs  point.rs  polygon.rs  rectangle.rs  root.rs  scale.rs  stroke.rs  text.rs  triangle.rs
claris-impl/src/renderer/: arc.rs  circle.rs  curve.rs  line.rs  mod.rs  polygon.rs  rectangle.rs  text.rs  triangle.rs
claris-impl/src/testing_helpers/: macros.rs  mod.rs
claris-impl/src/testing_helpers/defaults/: arc.rs  circle.rs  color.rs  curve.rs  line.rs  mod.rs  point.rs  polygon.rs  rectangle.rs  text.rs  triangle.rs
claris-impl/src/testing_helpers/stub/: context.rs  mod.rs
src/: main.rs
