[package]
name = "claris"
version = "0.1.0"
authors = ["masato <masato.hirahata@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
claris-impl = { version = "0.1.0", path = "claris-impl"}
simple_logger = "1.6"
getopts = "0.2"
log = { version = "0.4", features = ["release_max_level_error"] }

[workspace]
members = ["claris-impl"]
