[package]
name = "claris-impl"
version = "0.1.0"
authors = ["masato <masato.hirahata@gmail.com>"]
edition = "2018"

[dependencies]
yaml-rust = "0.4"
cairo-rs = { version = "0.8", features=["png"] }
css-color-parser = "0.1"
log = { version = "0.4", features = ["release_max_level_error"] }

[dev-dependencies]
float-cmp = "0.6"
tempfile = "3"
